Version 0.4.0

* Evan Sampson added Holdridge life zones model

Version 0.4.1

* Generation of grayscale heightmap

Version 0.4.2

* Generation of rivers map
* Stefan Feltmann ported Lands to Pillow (removing PIL)

Version 0.4.3

* Adopting plate-tectonics (my fork of platec) which permits rectangular plate calculations

Version 0.5.0

* Supporting python 3
* Initial GUI

Version 0.5.1

* Packaging lands as a script